--- a/index.html
+++ b/index.html
@@ -28,3 +28,4 @@
         const numBubbles = 100;
 
         for (let i = 0; i < numBubbles; i++) {
+            let x = Math.random() * canvas.width;
