--- a/index.html
+++ b/index.html
@@ -29,3 +29,4 @@
 
         for (let i = 0; i < numBubbles; i++) {
             let x = Math.random() * canvas.width;
+            let y = Math.random() * canvas.height;
