--- a/index.html
+++ b/index.html
@@ -30,3 +30,4 @@
         for (let i = 0; i < numBubbles; i++) {
             let x = Math.random() * canvas.width;
             let y = Math.random() * canvas.height;
+            let r = Math.random() * 20 + 10;
