--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@
             let x = Math.random() * canvas.width;
             let y = Math.random() * canvas.height;
             let r = Math.random() * 20 + 10;
+            bubbles.push({ x, y, r });
