--- a/index.html
+++ b/index.html
@@ -38,3 +38,4 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             bubbles.forEach(bub => {
+                ctx.beginPath();
