--- a/index.html
+++ b/index.html
@@ -39,3 +39,4 @@
 
             bubbles.forEach(bub => {
                 ctx.beginPath();
+                ctx.arc(bub.x, bub.y, bub.r, 0, Math.PI * 2);
