--- a/index.html
+++ b/index.html
@@ -40,3 +40,4 @@
             bubbles.forEach(bub => {
                 ctx.beginPath();
                 ctx.arc(bub.x, bub.y, bub.r, 0, Math.PI * 2);
+                const gradient = ctx.createRadialGradient(bub.x, bub.y, 0, bub.x, bub.y, bub.r);
