--- a/index.html
+++ b/index.html
@@ -41,3 +41,4 @@
                 ctx.beginPath();
                 ctx.arc(bub.x, bub.y, bub.r, 0, Math.PI * 2);
                 const gradient = ctx.createRadialGradient(bub.x, bub.y, 0, bub.x, bub.y, bub.r);
+                gradient.addColorStop(0, 'cyan');
