--- a/index.html
+++ b/index.html
@@ -42,3 +42,4 @@
                 ctx.arc(bub.x, bub.y, bub.r, 0, Math.PI * 2);
                 const gradient = ctx.createRadialGradient(bub.x, bub.y, 0, bub.x, bub.y, bub.r);
                 gradient.addColorStop(0, 'cyan');
+                gradient.addColorStop(1, 'transparent');
