--- a/index.html
+++ b/index.html
@@ -43,3 +43,4 @@
                 const gradient = ctx.createRadialGradient(bub.x, bub.y, 0, bub.x, bub.y, bub.r);
                 gradient.addColorStop(0, 'cyan');
                 gradient.addColorStop(1, 'transparent');
+                ctx.fillStyle = gradient;
