--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@
                 gradient.addColorStop(0, 'cyan');
                 gradient.addColorStop(1, 'transparent');
                 ctx.fillStyle = gradient;
+                ctx.fill();
