--- a/index.html
+++ b/index.html
@@ -54,3 +54,4 @@
 
         canvas.addEventListener('mousemove', (e) => {
             bubbles.forEach(bub => {
+                const dist = Math.hypot(e.offsetX - bub.x, e.offsetY - bub.y);
