--- a/index.html
+++ b/index.html
@@ -56,3 +56,4 @@
             bubbles.forEach(bub => {
                 const dist = Math.hypot(e.offsetX - bub.x, e.offsetY - bub.y);
                 if (dist < bub.r) {
+                    bub.r += 5;
