--- a/index.html
+++ b/index.html
@@ -57,3 +57,4 @@
                 const dist = Math.hypot(e.offsetX - bub.x, e.offsetY - bub.y);
                 if (dist < bub.r) {
                     bub.r += 5;
+                } else {
